# tooi

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: minimal_spec.md
examples/: hello.tooi
include/tooi/cli/: args_parser.h  colors.h  repl.h  run_from_file.h
include/tooi/core/: error_info.h  error_registry.h  error_reporter.h  interpreter.h  scanner.h  token.h
src/: main.cpp
src/cli/: args_parser.cpp  repl.cpp  run_from_file.cpp
src/core/: error_registry.cpp  error_reporter.cpp  interpreter.cpp  scanner.cpp
tests/cli/: args_parser_test.cpp
tests/core/: error_handling_test.cpp  scanner_test.cpp
